--- a/arch/arm64/configs/ugglite_msm8937_defconfig
+++ b/arch/arm64/configs/ugglite_msm8937_defconfig
@@ -279,7 +279,7 @@ CONFIG_PPP_SYNC_TTY=y
 CONFIG_USB_USBNET=y
 CONFIG_WCNSS_CORE=y
 CONFIG_WCNSS_CORE_PRONTO=y
-CONFIG_PRONTO_WLAN=y
+CONFIG_PRONTO_WLAN=m
 CONFIG_WCNSS_REGISTER_DUMP_ON_BITE=y
 CONFIG_WCNSS_MEM_PRE_ALLOC=y
 CONFIG_CNSS_CRYPTO=y
